--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>JavaEELearning</groupId>
-  <artifactId>JavaEELearning</artifactId>
+  <groupId>WarframeApi</groupId>
+  <artifactId>WarframeApi</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
@@ -56,6 +56,13 @@
             <version>3.4</version>
             <scope>compile</scope>
         </dependency>
+        
+		<!-- Gson Json parser -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 
         <!-- PrimeFaces dependencies -->
         <dependency>
