--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>3.4</version>
             <scope>compile</scope>
         </dependency>
+	
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.2</version>
+		</dependency>
         
 		<!-- Gson Json parser -->
 		<dependency>
